Monitoring/Installing_prometheus_stack_using_ansible/files/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /grafana/?(.*)
        pathType: Prefix
        backend:
          service:
            name: monitoring-grafana
            port:
              number: 80
      - path: /prometheus/?(.*)
        pathType: Prefix
        backend:
          service:
            name: monitoring-kube-prometheus-stack-prometheus
            port:
              number: 9090
      - path: /alertmanager/?(.*)
        pathType: Prefix
        backend:
          service:
            name: monitoring-kube-prometheus-stack-alertmanager
            port:
              number: 9093
